--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool:
 steps: 
 - task: GoTool@0
   inputs:
-    version: '1.13.5'
+    version: '1.14.3'
 # - task: Go@0
 #   inputs:
 #     command: 'get'
@@ -20,7 +20,7 @@ steps:
 - task: Go@0
   inputs:
     command: 'build'
-    arguments: 'cmd/loki'
+    arguments: './cmd/loki'
     workingDirectory: '$(Build.SourcesDirectory)'
 
 # - task: CopyFiles@2
